<resources>
    <string name="app_name">CalAppo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">Connected to: SERVER</string>
    <string name="nav_header_desc">Small Calendar App</string>
    <string name="action_settings">Settings</string>

    <string name="menu_overview">Schedule Overview</string>
    <string name="menu_day">Day</string>
    <string name="menu_week">Week</string>
    <string name="menu_month">Month</string>
    <string name="menu_default_cal">Default calendar</string>
    <string name="menu_cal2">Calendar 2</string>

    <!--new appointment modal-->
    <string name="hint_title">Add title</string>

</resources>
